...
    <string name="input_name">Your Name</string>
    <string name="input_email">Your Email</string>
    <string name="input_password">Your Password</string>
    <string name="input_description">What would you like to share?</string>
    <string name="input_location">(Optional) Your location</string>
    <string name="input_info_password">Type a password of at least 6 characters</string>
    <string name="input_error_password">Less than 6 characters</string>
    <string name="input_error_email">Invalid email entered</string>
    <string name="input_error_empty">Please fill out this field</string>
    <string name="input_error_image">Please insert the file</string>

    <string name="button_register">Register</string>
    <string name="button_login">Login</string>
    <string name="button_upload">Upload a story</string>
    <string name="button_list">Show list story</string>
...
